[package]
name = "pixelar"
version = "0.1.0"
edition = "2021"
description = "Show everyone the art hidden inside your code."
license = "MIT"
readme = "README.md"
repository = "https://github.com/immmdreza/pixelar"
license-file = "LICENSE"
keywords = ["pixel", "graphics", "pixelart", "art", "gif"]
exclude = ["arts/", ".vscode/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imageproc = "0.23"
image = "0.24"
